tekton/dashboard/basic-dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  rules:
    - host: tek-dash.local
      http:
        paths:
          - backend:
              serviceName: tekton-dashboard
              servicePort: 9097
