tekton/dashboard/https-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  tls:
    - hosts:
        - tekton.apps.fedex.ocp4.agiledigital.co
      secretName: apps-wildcard-tls
  rules:
    - host: tekton.apps.fedex.ocp4.agiledigital.co
      http:
        paths:
          - backend:
              serviceName: tekton-dashboard
              servicePort: 9097
